Fix NTP frame restoration after opening animation.

BVC's content area is temporary resized during New Tab opening
animation. This cl fixes frame restoration code, which now simply
subtracts status bar from the frame. The old code retained the original
frame and restored it on animation completion (which did not work on
orientation change).

Bug: 835291
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ifae9879587bf688985addfe8e95408157c54aa58
Reviewed-on: https://chromium-review.googlesource.com/1022735
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552713}
Former-commit-id: 0f0a4eff09a28ed09160660b62f13ca06b944cf1