ios/chrome/browser/ui/browser_view_controller.mm
@@ -5055,7 +5055,6 @@ bubblePresenterForFeature:(const base::Feature&)feature
   };
 
   self.inNewTabAnimation = YES;
-  CGRect oldContentAreaFrame = self.contentArea.frame;
   if (!background) {
     // Create the new page image, and load with the new tab snapshot except if
     // it is the NTP.
@@ -5066,9 +5065,8 @@ bubblePresenterForFeature:(const base::Feature&)feature
         !_isOffTheRecord && !IsIPadIdiom()) {
       offset = 0;
       // Temporary expand content area to take whole view space. Otherwise the
-      // animated NTP will be clipped by content area bound. Previous frame is
-      // stored in |oldContentAreaFrame| and will be reset back on animation
-      // completion.
+      // animated NTP will be clipped by content area bound. Previous frame will
+      // be reset back on the animation completion.
       self.contentArea.frame = self.view.frame;
       newPage = tab.view;
       newPage.userInteractionEnabled = NO;
@@ -5113,7 +5111,13 @@ bubblePresenterForFeature:(const base::Feature&)feature
             self.foregroundTabWasAddedCompletionBlock();
             self.foregroundTabWasAddedCompletionBlock = nil;
           }
-          self.contentArea.frame = oldContentAreaFrame;
+
+          // Restore content area frame, which was resized to fullscreen for
+          // NTP opening animation.
+          CGRect contentAreaFrame = self.view.bounds;
+          contentAreaFrame.origin.y += StatusBarHeight();
+          contentAreaFrame.size.height -= StatusBarHeight();
+          self.contentArea.frame = contentAreaFrame;
         });
   } else {
     // SnapshotTabHelper::UpdateSnapshot will force a screen redraw, so take the
